<resources>
    <string name="app_name">Crypto_Florian_Morin</string>
    <string name="name">Name</string>
    <string name="rechercher">Rechercher</string>
    <string name="go">GO</string>
    <string name="search">SEARCH</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_detail_crypto2">DetailCrypto2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retour_au_menu">Retour au menu</string>
    <string name="refresh">Refresh</string>
    <string name="textview">En cours de chargement, veuillez patienter</string>
    <string name="todo">TODO</string>
</resources>