<?xml version="1.0" encoding="utf-8"?>
<!-- This is "Fragment A"-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="334dp"
        android:layout_height="548dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NomCrypto"
        android:layout_width="124dp"
        android:layout_height="52dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/ActiverReche"
        android:layout_width="59dp"
        android:layout_height="39dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="29dp"
        android:text="@string/go"
        app:layout_constraintEnd_toStartOf="@+id/Refresh"
        app:layout_constraintStart_toEndOf="@+id/NomCrypto"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="12dp"
        android:text="@string/refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ActiverReche"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>