<?xml version="1.0" encoding="utf-8"?>
<!-- This is "Fragment B"-->
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="22dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:text="This is sample title" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="378dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="250dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDetails2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textview" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/RetourArriere"
        android:layout_width="138dp"
        android:layout_height="84dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="92dp"
        android:text="@string/retour_au_menu" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="300dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="47dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@android:drawable/ic_menu_crop" />

</RelativeLayout>